--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ h1 {
 
 
     <TITLE>miRBind</TITLE>
-    <link rel='icon' href='RBPlogo.png'>
+    <link rel='icon' href='https://github.com/ML-Bioinfo-CEITEC/miRBind/blob/gh-pages/RBPlogo.png'>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
