--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <HEAD>
 <style>
 .seqtext {
-  //display: block;
   font-family: Georgia, serif;
   white-space: pre;
   margin: 1em 0;
@@ -14,16 +13,13 @@
 
 html,
 body {
-  //margin-top: 50px;
   padding: 0;
-  //box-sizing: border-box;
   background: #fff;
   color: #778899;
   float: center;
 }
 
 h1 {
-  //display: inline-block;
   width: 20%;
   font-family: "Verdana", sans-serif;
   font-size: 3em;
@@ -40,7 +36,6 @@ h1 {
 
 .tab {
   width: 80%;
-  //font-family: 'Trebuchet MS', sans-serif;
   font-family: 'Times New Roman', serif;
   margin: auto;  
 }
@@ -48,19 +43,15 @@ h1 {
 
 .bar-button {
   background-color: #4682B4;
-  /* Navy blue */
   color: white;
   padding: 15px 30px;
   text-align: center;
-  //float:left;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   font-weight: bold;
-  //text-transform: uppercase;
   font-variant-caps: petite-caps;
   border: 1px solid #4682B4;
-  //border-style: outset none solid double;
 }
 .bar-button, .bar-button0 {
   float:left;
@@ -72,9 +63,7 @@ h1 {
 }
 
 .bar .bar-button {
-  //width: 30%;
   float: left;
-  //display: inline-block;
 }
 
 .bar-button0 {
@@ -86,7 +75,6 @@ h1 {
   color: white;
   padding: 8.5px 20px;
   text-align: center;
-  //float:left;
   text-decoration: none;;
   font-size: 25px;
   font-weight: bolder;
@@ -95,21 +83,17 @@ h1 {
 }
 
 .bar .bar-button0 {
-  //width: 10%;
   float: left;
 }
 .bar .bar-button:active {
   background-color: #4682B4;
   box-shadow: 0 5px #666;
-  //transform: translateY(1px);
-}
-
-   
+}   
 </style>
 
 
     <TITLE>miRBind</TITLE>
-    <link rel='icon' href='https://github.com/ML-Bioinfo-CEITEC/miRBind/blob/gh-pages/RBPlogo.png'>
+    <link rel='icon' href='RBPlogo.png'>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
