--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ h1 {
       <FORM method="post" enctype="multipart/form-data" ><br />
         <h4><strong>About miRBind</strong></h4>
 		<p>The <strong>miRBind JS</strong> web interface predicts the potential of miRNA:target binding. To use our machine learning method, first choose the size of the input by clicking either on <i><strong>Single pair</strong></i> or on <i><strong>Multiple pairs</strong></i>). For multiple input pairs, you are prompted to select the format of the input (<i><strong>Line separated</strong></i> or <i><strong>Multi-FASTA</strong></i>).</p>
-	<DIV class="prob1" , id="prob1"><p>For more info about miRBind, click <A href="" target="_blank" rel="noopener noreferrer">here</A>.</p></DIV><br/>
+	<DIV class="prob1" , id="prob1"><p>For more info about miRBind, click <A href="https://github.com/ML-Bioinfo-CEITEC/miRBind" target="_blank" rel="noopener noreferrer">here</A>.</p></DIV><br/>
       </FORM>
     </div>
 	
