--- a/index.html
+++ b/index.html
@@ -90,10 +90,21 @@ h1 {
   box-shadow: 0 5px #666;
 }
 
-table, th, td {
-  border: 1.5px solid black;
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
 }
-   
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}  
 </style>
 
 
