--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ tr:nth-child(even) {
         <h4><strong>About miRBind</strong></h4>
 		<p>The <strong>miRBind JS</strong> web interface predicts the potential of miRNA:target binding. To use our machine learning method, first choose the size of the input by clicking either on <i><strong>Single pair</strong></i> or on <i><strong>Multiple pairs</strong></i>).</p>
 	<DIV class="prob1" , id="prob1"><p>For more info about miRBind, click <A href="https://github.com/ML-Bioinfo-CEITEC/miRBind" target="_blank">here</A>.</p></DIV><br/>
-	<strong>Appendix</strong><br/>For the interpretation of the miRBind scores:
+	<strong>Key</strong><br/>For the interpretation of the miRBind scores:
 	<br/>Scores highlighted in <span  style='color:green;'>green</span> exceed the sensitive threshold (0.5) of miRBind.<br/> Scores highlighted in <span  style='color:blue;'>blue</span> exceed the precise threshold (0.9) of miRBind.
       </FORM>
     </div>
